--- a/app/src/main/res/layout/activity_testfont.xml
+++ b/app/src/main/res/layout/activity_testfont.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:ifavor="http://schemas.android.com/apk/res/example.com.templateprogram"
                 android:id="@+id/rl_testfont"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -43,11 +44,23 @@
 
     <example.com.templateprogram.test.view.SlipSwitch
         android:id="@+id/main_myslipswitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_below="@+id/ll"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/deimen_10x"/>
+
+
+    <example.com.templateprogram.test.view.SwitchButton
+        android:id="@+id/switchbutton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_below="@+id/main_myslipswitch"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="10dip"
+        ifavor:isOpened="false"
+        ifavor:slide_button="@drawable/switch_btn_slipper"
+        ifavor:switch_background="@drawable/switch_btn_on"/>
 
 
 </RelativeLayout>
