播放本地GIF图片

--- a/app/src/main/res/layout/activity_test_gif.xml
+++ b/app/src/main/res/layout/activity_test_gif.xml
@@ -4,8 +4,8 @@
                 android:layout_height="match_parent">
 
     <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/giv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/yuzhibodaitu"/>
+        android:scaleType="fitXY"/>
 </RelativeLayout>
