--- a/app/src/main/res/layout/activity_test_googlebanner.xml
+++ b/app/src/main/res/layout/activity_test_googlebanner.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        ads:adSize="SMART_BANNER"
+        ads:adSize="BANNER"
         ads:adUnitId="@string/banner_ad_unit_id"/>
 
 
