--- a/app/src/main/res/layout/item_city.xml
+++ b/app/src/main/res/layout/item_city.xml
@@ -1,25 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingLeft="15dp">
+    android:layout_height="@dimen/deimen_70x">
 
     <ImageView
         android:id="@+id/ivAvatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/deimen_15x"
         tools:src="@drawable/friend"/>
 
     <TextView
         android:id="@+id/tvCity"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/deimen_15x"
+        android:layout_toRightOf="@+id/ivAvatar"
         android:gravity="center_vertical"
-        android:paddingLeft="15dp"
         tools:text="安徽"/>
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_code"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/deimen_40x"
+        android:gravity="center_vertical"
+        android:text="1111"/>
+
+
+</RelativeLayout>
