--- a/app/src/main/res/layout/activity_test_slidingmenu2.xml
+++ b/app/src/main/res/layout/activity_test_slidingmenu2.xml
@@ -3,7 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <example.com.templateprogram.test.haha.SlidingDrawerLayout
+    <example.com.templateprogram.test.view.SlidingDrawerLayout
         android:id="@+id/slidingDrawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,5 +22,5 @@
             layout="@layout/bottom"/>
 
 
-    </example.com.templateprogram.test.haha.SlidingDrawerLayout>
+    </example.com.templateprogram.test.view.SlidingDrawerLayout>
 </RelativeLayout>
