--- a/app/src/main/res/layout/activity_test_animation.xml
+++ b/app/src/main/res/layout/activity_test_animation.xml
@@ -4,11 +4,11 @@
                 android:layout_height="match_parent"
                 android:background="@color/appblack">
 
-
     <RelativeLayout
         android:id="@+id/rl_animation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/iv_animation"
@@ -17,4 +17,43 @@
             android:scaleType="fitXY"
             android:src="@mipmap/shouye1"/>
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/ll2"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal">
+
+        <example.com.templateprogram.test.view.Roll3DView
+            android:id="@+id/three_d_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btn_Pre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="上一个"/>
+
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="下一个"/>
+    </LinearLayout>
+
+
 </RelativeLayout>
