--- a/app/src/main/res/layout/activity_test_imageqrcode.xml
+++ b/app/src/main/res/layout/activity_test_imageqrcode.xml
@@ -8,9 +8,16 @@
         android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_toRightOf="@+id/btn2"
         android:onClick="onClick"
         android:text="生成图片"/>
+
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="下载图片背景框架"/>
 
     <ImageView
         android:id="@+id/iv"
