--- a/app/src/main/res/layout/activity_test_animation.xml
+++ b/app/src/main/res/layout/activity_test_animation.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/appblack">
+                android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/rl_animation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/iv_animation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
-            android:src="@mipmap/shouye1"/>
+            android:src="@mipmap/shouye1"
+            android:visibility="gone"/>
+
+        <ImageView
+            android:id="@+id/iv_animation2"
+            android:layout_width="@dimen/deimen_200x"
+            android:layout_height="@dimen/deimen_200x"
+            android:layout_centerInParent="true"
+            android:scaleType="fitXY"
+            android:src="@mipmap/huanci"/>
     </RelativeLayout>
 
     <LinearLayout
@@ -24,7 +32,8 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/ll2"
         android:layout_centerInParent="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <example.com.templateprogram.test.view.Roll3DView
             android:id="@+id/three_d_view"
@@ -40,19 +49,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="visible">
 
         <Button
             android:id="@+id/btn_Pre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="上一个"/>
+            android:text="上一个"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/btn_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="下一个"/>
+            android:text="下一个"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/btn_zoom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="放大缩小"/>
     </LinearLayout>
 
 
