--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -32,12 +32,9 @@
     </declare-styleable>
 
 
-    <!--<declare-styleable name="MarqueeTextView">-->
-        <!--<attr name="scroll_interval" format="integer"/>-->
-        <!--<attr name="scroll_first_delay" format="integer"/>-->
-        <!--<attr name="scroll_mode">-->
-            <!--<enum name="mode_forever" value="100"/>-->
-            <!--<enum name="mode_once" value="101"/>-->
-        <!--</attr>-->
-    <!--</declare-styleable>-->
+    <declare-styleable name="asia.ivity.android.marqueeview.MarqueeView">
+        <attr name="speed" format="integer"/>
+        <attr name="pause" format="integer"/>
+        <attr name="autoStart" format="boolean"/>
+    </declare-styleable>
 </resources>
