--- a/app/src/main/res/layout/activity_test_rxjava.xml
+++ b/app/src/main/res/layout/activity_test_rxjava.xml
@@ -3,4 +3,45 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/deimen_30x"
+        android:layout_marginTop="@dimen/deimen_20x"
+        android:text="防止连续点击"
+        android:textSize="@dimen/deimen_16x"/>
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/deimen_30x"
+        android:layout_marginTop="@dimen/deimen_25x"
+        android:layout_toRightOf="@+id/btn1"
+        android:checked="true"
+        android:text="CheckBox"
+        android:textSize="@dimen/deimen_16x"/>
+
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn1"
+        android:layout_marginLeft="@dimen/deimen_30x"
+        android:layout_marginTop="@dimen/deimen_20x"
+        android:text="长按事件"
+        android:textSize="@dimen/deimen_16x"/>
+
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn2"
+        android:layout_marginLeft="@dimen/deimen_30x"
+        android:layout_marginTop="@dimen/deimen_20x"
+        android:text="多次监听事件"
+        android:textSize="@dimen/deimen_16x"/>
+
+
 </RelativeLayout>
