--- a/app/src/main/res/drawable/item_bg.xml
+++ b/app/src/main/res/drawable/item_bg.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@color/appblue" android:state_pressed="true"></item>
-    <item android:drawable="@color/crowded_yellow"></item>
+    <item android:drawable="@drawable/transparent_bg_two"></item>
 
 </selector>
