--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -28,7 +28,8 @@
                 android:gravity="center"
                 android:paddingBottom="20dp"
                 android:paddingTop="20dp"
-                android:text="1111111111"/>
+                android:text="1111111111"
+                android:textColor="@color/appwhite"/>
         </LinearLayout>
 
     </LinearLayout>
